Add title/ input for html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <div class="input">
+            <h2>How Big Do You Want Your Grid</h2>        
+        </div>
+        <div class="input">
+            <input type="button" value="create grid">
+            <input type="text" id="size" name="size">
+        </div>
         <div class="container">
-            
+
         </div>
     </body>
 </html>
